# SDL2Template

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  makefile
cmake/: FindSDL2.cmake
src/: appmanager.cpp  appmanager.hpp  build_mac.sh  eventHandler.cpp  eventHandler.hpp  globals.hpp  headers.hpp  main.cpp  renderer.cpp  renderer.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
